[project]
name = "backend"
version = "0.1.0"
description = "Marketing audience segmentation agent powered by LangGraph and Volc Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "langchain-community>=0.0.25",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
]
